added api to calculate ciggrate from aqi
